--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,4 +1,4 @@
-# List the start up tasks. Learn more: https://www.gitpod.io/docs/configure/workspaces/tasks
+
 tasks:
   - name: Script Task
     init: echo 'init script' # runs during prebuild => https://www.gitpod.io/docs/configure/projects/prebuilds
@@ -11,6 +11,18 @@ ports:
     port: 3000
     onOpen: open-preview
 
-image: node:18
-
 # Learn more from ready-to-use templates: https://www.gitpod.io/docs/introduction/getting-started/quickstart
+
+vscode:
+  extensions:
+    - mhutchie.git-graph
+    - PKief.material-icon-theme
+    - lukashass.volar
+    - naumovs.color-highlight
+    - EditorConfig.EditorConfig
+    - dbaeumer.vscode-eslint
+    - christian-kohler.npm-intellisense
+    - esbenp.prettier-vscode
+    - bradlc.vscode-tailwindcss
+    - Gruntfuggly.todo-tree
+    - ZixuanChen.vitest-explorer
