--- a/package.json
+++ b/package.json
@@ -13,5 +13,12 @@
     "prettier": "^2.8.3",
     "prettier-plugin-tailwindcss": "^0.2.2",
     "webpack": "^5.0.0"
+  },
+  "dependencies": {
+    "@trpc/client": "^10.9.1",
+    "@trpc/server": "^10.9.1",
+    "superjson": "^1.12.2",
+    "trpc-nuxt": "^0.5.0",
+    "zod": "^3.20.2"
   }
 }
